--- a/src/assets/style/general.scss
+++ b/src/assets/style/general.scss
@@ -1,3 +1,4 @@
 @import "../style/parts/typo.scss";
 @import "../style/parts/colors.scss";
 @import "../style/parts/reset.scss";
+@import "../style/parts/size.scss";
