--- a/src/assets/style/parts/reset.scss
+++ b/src/assets/style/parts/reset.scss
@@ -4,9 +4,6 @@
     box-sizing: border-box;
 }
 
-.container {
-    height: 100vh;
-    max-width: 1320px;
-    margin: auto;
-    background-color: lightseagreen;
+li {
+    list-style: none;
 }
