add general style

--- a/src/assets/style/general.scss
+++ b/src/assets/style/general.scss
@@ -1,3 +1,4 @@
+@import "~bootstrap/scss/bootstrap.scss";
 @import "../style/parts/typo.scss";
 @import "../style/parts/colors.scss";
 @import "../style/parts/reset.scss";
