--- a/src/assets/style/parts/size.scss
+++ b/src/assets/style/parts/size.scss
@@ -3,6 +3,13 @@ img {
 }
 
 .container {
-    max-width: 1200px;
-    margin: auto;
+    padding: 0;
+}
+
+.col-3 {
+    padding: 0;
+}
+
+ul {
+    padding: 0;
 }
